chore: updates for jvm23 (#2)
Signed-off-by: Sam Gammon <sam@elide.dev>